--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ set(PROJECT_SOURCES
 
         Popups/ResizePopup/resizepopup.h Popups/ResizePopup/resizepopup.cpp Popups/ResizePopup/resizepopup.ui
         Popups/LightenPopup/lightenpopup.h Popups/LightenPopup/lightenpopup.cpp Popups/LightenPopup/lightenpopup.ui
+        Popups/CannyPopup/cannypopup.h Popups/CannyPopup/cannypopup.cpp Popups/CannyPopup/cannypopup.ui
 
         ${CLASSES_DIR}/LayerManager/LayerManager.h ${CLASSES_DIR}/LayerManager/LayerManager.cpp
         ${CLASSES_DIR}/ImageTransformer/ImageTransformer.h ${CLASSES_DIR}/ImageTransformer/ImageTransformer.cpp
